# rexeno

./: .cproject  .project  README  install.sh  installDummy.sh
3rdparties/code/: getLibraries.sh
3rdparties/lib/linux-ububuntu-12-04-noxeno/: libboost_filesystem.so.1.46.1  libboost_program_options.so.1.46.1
3rdparties/linux-ububuntu-10-04-noxeno/src/gl-mesa/: mesa_7.7.1-1ubuntu3.1.dsc
3rdparties/linux-ububuntu-10-04-noxeno/src/gl-mesa/mesa-7.7.1/debian/: changelog
3rdparties/linux-ububuntu-10-04-noxeno/src/gl-mesa/mesa-7.7.1/lib/: libEGL.so.1.0  libGL.so.1  libOSMesa.so.7.7.1
3rdparties/linux-ububuntu-10-04-noxeno/src/x11/: libx11_1.3.2-1ubuntu3.1.dsc
3rdparties/linux-ububuntu-10-04-noxeno/src/x11/libx11-1.3.2/: ChangeLog  Makefile  config.status  libtool  x11-xcb.pc  x11.pc
3rdparties/linux-ububuntu-10-04-noxeno/src/x11/libx11-1.3.2/debian/: changelog  control  libx11-6.symbols  rules
3rdparties/linux-ububuntu-10-04-noxeno/src/x11/libx11-1.3.2/include/: Makefile
3rdparties/linux-ububuntu-10-04-noxeno/src/xau/: libxau_1.0.5-1.dsc
3rdparties/linux-ububuntu-10-04-noxeno/src/xau/libxau-1.0.5/: Makefile  config.h  config.status  libtool  xau.pc
3rdparties/linux-ububuntu-10-04-noxeno/src/xcb-glx0/: libxcb_1.5-2ubuntu0.1.dsc
3rdparties/linux-ububuntu-10-04-noxeno/src/xcb-glx0/libxcb-1.5/: Makefile  config.status  libtool  xcb-composite.pc  xcb-dpms.pc  xcb-glx.pc  xcb-randr.pc  xcb-record.pc  xcb-render.pc  xcb-xevie.pc  xcb-xf86dri.pc  xcb-xfixes.pc  xcb-xinerama.pc  xcb-xinput.pc  xcb-xprint.pc  xcb-xselinux.pc  xcb-xv.pc  xcb-xvmc.pc  xcb.pc
3rdparties/linux-ububuntu-10-04-noxeno/src/xcb-proto/: xcb-proto_1.6-1.dsc
3rdparties/linux-ububuntu-10-04-noxeno/src/xcb-proto/xcb-proto-1.6/: Makefile  config.status  xcb-proto.pc
3rdparties/linux-ububuntu-12-04-noxeno/include/Qt/: Qt3Support
3rdparties/linux-ububuntu-12-04-noxeno/include/QtDesigner/: QtDesigner
3rdparties/linux-ububuntu-12-04-noxeno/lib/: libboost_unit_test_framework.so.1.46.1  libnvidia-tls.so.304.88
3rdparties/linux-ububuntu-12-04-noxeno/src/: Compilation.sh
3rdparties/linux-ububuntu-12-04-xeno/: manifest.txt  manifest.txt~
3rdparties/linux-ububuntu-12-04-xeno/include/Qt/: QtGui
3rdparties/linux-ububuntu-12-04-xeno/include/QtCore/: QtCore
3rdparties/linux-ububuntu-12-04-xeno/include/QtDeclarative/: QtDeclarative
3rdparties/linux-ububuntu-12-04-xeno/include/xenomai/: xeno_config.h
3rdparties/linux-ububuntu-12-04-xeno/lib/: arith  check-vdso  clocktest  cond-torture-native  cond-torture-posix  cyclictest  irqbench  irqloop  klatency  latency  libGL.so.1  libboost_program_options.so.1.46.1  libboost_system.so.1.46.1  libxcb.so.1  libxenomai.la  mutex-torture-native  mutex-torture-posix  rtdm  switchtest  wakeup-time  xeno-test-run
build_xenomai/: CMakeCache.txt  Makefile  cmake_install.cmake
build_xenomai/configuration/: Makefile  cmake_install.cmake
build_xenomai/driver/: Makefile  cmake_install.cmake
build_xenomai/recorder/: Makefile  cmake_install.cmake
build_xenomai/session/: Makefile  cmake_install.cmake
configFiles/: rexeno
libraries/: CMakeCache.txt  CMakeList.txt~  CMakeLists.txt  CMakeLists.txt~  Makefile  a.out  cmake_install.cmake  install_manifest.txt  main.cc  session.cc~  trial.cc~
libraries/CreateSession/: CMakeLists.txt  SessionCreator.cc
libraries/CreateSession/includes/: model.hh  view.hh
libraries/CreateSession/model/: model.cc
libraries/CreateSession/view/: SessionCreator.hh  SessionCreator.ui
libraries/Matrix/: fft.cxx  fft.h  install.sh  matrix.cxx  matrix.hh
libraries/Matrix/test/: Makefile  main.cc
libraries/calibration/: calibration.hh
libraries/configFiles/: shape_prototypes
libraries/configuration/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  option.hh  order_parser.cc  parser.cc  parser.cc~  parser.hh  parser.hh~
libraries/configuration/configuration/: Makefile
libraries/documentation/: README
libraries/driver/: CMakeLists.txt  Makefile  calibration.cc  cmake_install.cmake  driver.cc  dummyDriver.cc  fileCalibration.cc  fileDriver.cc  xenoDriver.cc
libraries/includes/: calibration.hh  controler.hh  cross.hh  driver.hh  dummyDriver.hh  fileCalibration.hh  imageload.hh  interface.hh  matrix.cxx  matrix.hh  matrix.txt  model.hh  note.txt  order_parser.hh  plan.hh  recorder.hh  rectangle.hh  rectangle3d.hh  rexeno.hh  session.hh  session.hh~  setup.hh  shape.hh  shape.hh.orig  shape.hh~  sphere.hh  sphereshadow.hh  square.hh  square3d.hh  trial.hh  trial.hh~  types.hh  variable.hh  view.hh  window.hh
libraries/interface/: CMakeLists.txt  TrialCreateMain.cc
libraries/interface/controler/: controler.cc
libraries/interface/model/: model.cc
libraries/interface/view/: mainWindow.hh  mainWindow.ui  view.cc
libraries/nidaq/: reader.cc
libraries/protocoles/DevTests/: conf  generator.py
libraries/recorder/: CMakeLists.txt  Makefile  cmake_install.cmake  logger.cc  recorder.cc
libraries/session/: CMakeLists.txt  Makefile  cmake_install.cmake  cross.cc  imageload.cc  mainSession.cc  plan.cc  rectangle.cc  rectangle3d.cc  session.cc  session.cc.orig  setup.cc  shape.cc  sphere.cc  sphereshadow.cc  square.cc  square3d.cc  trial.cc  trial.cc.orig  trial.cc_old  variable.cc  window.cc
libraries/testFiles/session/: definition
libraries/unitTest/: CMakeLists.txt
libraries/unitTest/session/: CMakeLists.txt  CMakelists.txt  sessionTest.cc
libraries/unitTest/testFiles/session/: conf  definition  main.cc
protocoles/: display  main.cc
protocoles/3D/: order
protocoles/default/: Makefile  definition  main.cc  order
protocoles/demo/: conf  conf~
protocoles/proto_switch/: Makefile  README  calib.sh  calib.txt  calib2.sh  conf  ctm  dummy.m  events.txt  id_trials.txt  main.cc  results.txt  run.sh  square_targets.txt
protocoles/test/: .cproject  .project  Makefile  definition  display  main.cc  order
prototypes/basic/: Makefile  a.out  latency.c
scripts/: analogyBindDriver.sh  conf  conf2def.py  rexeno-create-protocole  rexeno-init-protocole  rexeno-run  rexeno-saver
(+1271 files in other folders)
