cmake_minimum_required (VERSION 2.6)
project (Rexeno)

OPTION(XENO "Build Library with super cool option" ON)
if(XENO)
  target_link_libraries (Rexeno nidaq)
endif()

set(CMAKE_DEBUG_TYPE=DEBUG)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g")
include_directories ("${PROJECT_SOURCE_DIR}/configuration")
include_directories ("${PROJECT_SOURCE_DIR}/nidaq")
include_directories ("${PROJECT_SOURCE_DIR}/session")
include_directories ("${PROJECT_SOURCE_DIR}/includes")
include_directories ("${PROJECT_SOURCE_DIR}/recorder")
add_subdirectory (configuration)
add_subdirectory (session)
add_subdirectory (driver)
add_subdirectory (recorder)
add_subdirectory (unitTest)
add_executable(Rexeno main.cc)
target_link_libraries (Rexeno configuration)
target_link_libraries (Rexeno session)
target_link_libraries (Rexeno driver)
target_link_libraries (Rexeno recorder)
add_subdirectory (nidaq)
