cmake_minimum_required (VERSION 2.6)
if(XENO)
  add_definitions(-DXENO)
  include_directories ("/usr/xenomai/include")
  #link_directories ("/usr/xenomai/lib")
  link_directories ("/usr/xenomai/lib")
  link_libraries ("pthread")
  link_libraries ("native")
  link_libraries ("rt")
  link_libraries ("analogy")
  link_libraries ("rtdm")
  link_libraries ("xenomai")
endif()
include_directories ("${PROJECT_SOURCE_DIR}/includes")
add_library (driver dummyDriver.cc calibration.cc xenoDriver.cc)
install_targets(/lib driver)
