cmake_minimum_required (VERSION 2.6)

# boost
include_directories(${DIR3PARTY}/boost/include)
link_directories(${DIR3PARTY}/boost/lib)
if(XENO STREQUAL "ON")

# link_directories(${DIR3PARTY}/lib)
# include_directories(${DIR3PARTY}/include/xenomai)
# include_directories(${DIR3PARTY}/include)

  add_definitions(-DXENO)
  include_directories ("/usr/include/xenomai")
  link_directories ("/usr/lib/xenomai")
  #link_directories ("/usr/xenomai/lib")
  link_libraries ("pthread")
  link_libraries ("native")
  link_libraries ("rt")
  link_libraries ("analogy")
  link_libraries ("rtdm")
  link_libraries ("xenomai")
endif()
include_directories ("${PROJECT_SOURCE_DIR}/includes")
if(STATIC STREQUAL "ON")
  add_library (driver dummyDriver.cc calibration.cc xenoDriver.cc)
else()
  add_library (driver SHARED dummyDriver.cc calibration.cc xenoDriver.cc)
endif()
install_targets(/lib driver)
