cmake_minimum_required (VERSION 2.6)
set(CMAKE_CXX_FLAGS_INIT "-Wall --warn-uninitialized --warn-unused-vars '-std=c++0x'")
link_libraries (glut)
link_libraries (boost_program_options)
add_library (session session.cc trial.cc shape.cc square.cc rectangle.cc variable.cc setup.cc cross.cc)
target_link_libraries (configuration)
link_libraries(configuration)
link_libraries(driver)
add_executable (sessionBin session.cc trial.cc mainSession.cc shape.cc square.cc rectangle.cc variable.cc setup.cc)
include_directories ("${PROJECT_SOURCE_DIR}/includes")
include_directories ("${PROJECT_SOURCE_DIR}/includes")
include_directories ("${PROJECT_SOURCE_DIR}/configuration")
