cmake_minimum_required (VERSION 2.6)
if(XENO)
  add_definitions(-DXENO)
  include_directories ("/usr/xenomai/include")
  #link_directories ("/usr/xenomai/lib")
  link_directories ("/usr/xenomai/lib")
  link_libraries ("pthread")
  link_libraries ("native")
  link_libraries ("rt")
  link_libraries ("analogy")
  link_libraries ("rtdm")
  link_libraries ("xenomai")
endif()
set(CMAKE_CXX_FLAGS_INIT "-Wall --warn-uninitialized --warn-unused-vars '-std=c++0x'")

message(${DIR3PARTY})

link_directories(${DIR3PARTY}/lib)
link_libraries (GL)
link_libraries (glut)
link_libraries (boost_program_options)

if (STATIC)
  add_library (session session.cc trial.cc shape.cc square.cc rectangle.cc variable.cc setup.cc cross.cc setup.cc window.cc)
else()
  add_library (session SHARED session.cc trial.cc shape.cc square.cc rectangle.cc variable.cc setup.cc cross.cc setup.cc window.cc)
endif()
target_link_libraries (configuration)
link_libraries(configuration)
link_libraries(driver)
link_libraries(recorder)
add_executable (sessionBin session.cc trial.cc  shape.cc cross.cc square.cc  rectangle.cc variable.cc setup.cc window.cc mainSession.cc)
include_directories ("${PROJECT_SOURCE_DIR}/includes")
include_directories ("${PROJECT_SOURCE_DIR}/includes")
include_directories ("${PROJECT_SOURCE_DIR}/configuration")

install_targets(/lib session)
