cmake_minimum_required (VERSION 2.6)
set(CMAKE_CXX_FLAGS_INIT "-Wall --warn-uninitialized --warn-unused-vars")
link_libraries (boost_unit_test_framework)
link_libraries (boost_test_exec_monitor)
link_libraries (session)
link_libraries (configuration)
add_library (sessionTest.cc)
add_executable (sessionUnitTest sessionTest.cc)
include_directories ("${PROJECT_SOURCE_DIR}/includes")
include_directories ("${PROJECT_SOURCE_DIR}/includes")
include_directories ("${PROJECT_SOURCE_DIR}/configuration")
