cmake_minimum_required (VERSION 2.6)
include_directories(${DIR3PARTY}/boost/include/boost)
link_directories(${DIR3PARTY}/boost/lib)
set(CMAKE_CXX_FLAGS_INIT "-Wall --warn-uninitialized --warn-unused-vars")
link_libraries (boost_unit_test_framework)
link_libraries (boost_test_exec_monitor)
link_libraries (session)
link_libraries (configuration)
if (STATIC)
  add_library (SessionTest sessionTest.cc)
else()
  add_library (SessionTest SHARED sessionTest.cc)
endif()
add_executable (sessionUnitTest sessionTest.cc)
include_directories ("${PROJECT_SOURCE_DIR}/includes")
include_directories ("${PROJECT_SOURCE_DIR}/includes")
include_directories ("${PROJECT_SOURCE_DIR}/configuration")
